# fastapi-pydantic-ai-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  mise.toml  pyproject.toml
app/: config.py  logging_config.py  main.py  observability.py
app/agents/: chat_agent.py  deps.py  tools_mock.py
app/api/: health.py
app/api/v1/: agent.py  rag.py  router.py
app/middleware/: cors.py  rate_limit.py  request_id.py  request_size.py  security_headers.py
app/models/: agent.py  errors.py  rag.py
app/stores/: session_store.py  vector_store.py
app/workflows/: corrective_rag.py  events.py  exceptions.py  state.py
docs/: production_deployment.md  rate_limiting_implementation.md  vector_store_embeddings_migration.md
tests/: conftest.py
tests/benchmarks/: __init__.py  test_performance_benchmarks.py  utils.py
tests/e2e/: test_agent_chat.py  test_agent_stream.py  test_auth.py  test_health.py  test_health_ready.py  test_rag.py  test_rag_timeout_504.py  test_rate_limiting_enforcement.py
tests/integration/: test_agent_session.py  test_corrective_rag_timeout.py  test_docker_deployment.py  test_lifespan.py  test_lifespan_task8.py  test_rag_workflow.py  test_workflow_level_timeout.py
tests/local/: __init__.py  conftest.py  test_llm_granite33.py  test_llm_llama32.py
tests/unit/: test_config.py  test_config_api_key_strength.py  test_config_connection_pooling.py  test_config_dependency_bounds.py  test_config_extra_forbid.py  test_config_https_validation.py  test_config_llm_api_key_validation.py  test_config_llm_timeout.py  test_config_logfire_token_validation.py  test_config_mock_tools_guard.py  test_config_secret_str.py  test_config_security.py  test_deps.py  test_deps_workflow_cache_invalidation.py  test_deps_workflow_race_condition.py  test_error_response_codes.py  test_http_client_retry.py  test_http_client_retry_non_transient_5xx.py  test_logging_config.py  test_main.py  test_main_cors_wildcard_warning.py  test_main_security.py  test_middleware_cors.py  test_middleware_order.py  test_middleware_rate_limit.py  test_middleware_rate_limit_proxy.py  test_middleware_rate_limit_trusted_proxies.py  test_middleware_request_id.py  test_middleware_security_headers.py  test_naming_conventions.py  test_observability.py  test_workflow_cache_id_bug.py  test_workflow_cache_isolation.py  test_workflow_per_request.py
tests/unit/agents/: test_build_model_case_normalization.py  test_build_model_public_api.py  test_chat_agent.py  test_deps.py  test_mock_tools_separation.py  test_ollama_base_url_consistency.py  test_tools_mock.py
tests/unit/api/: test_health.py  test_health_async.py  test_health_ready.py
tests/unit/api/v1/: test_agent_endpoints.py  test_agent_error_logging_anonymization.py  test_agent_stream_adapter.py  test_agent_stream_save_failure.py  test_agent_tool_call_counting.py
tests/unit/middleware/: test_rate_limit_retry_after.py
tests/unit/models/: test_agent_models.py  test_errors.py  test_field_descriptions.py  test_rag_models.py
tests/unit/stores/: test_chroma_vector_store.py  test_ollama_embedding_response_validation.py  test_ollama_embedding_vector_store.py  test_redis_session_store.py  test_redis_session_store_double_close_fix.py  test_redis_session_store_exception_logging.py  test_redis_session_store_pydantic_serializer.py  test_session_store.py  test_session_store_clear_fix.py  test_session_store_clear_last_access.py  test_session_store_concurrent_cleanup.py  test_session_store_isinstance_fix.py  test_session_store_last_access_race_condition.py  test_session_store_lru_deadlock_fix.py  test_session_store_lru_eviction_lock.py  test_session_store_lru_overeviction_fix.py  test_session_store_lru_simplification.py  test_session_store_messages_validation.py  test_session_store_narrow_exceptions.py  test_session_store_race_conditions.py  test_session_store_server_generated_ids.py  test_session_store_ttl.py  test_session_store_validation.py  test_store_constants.py  test_vector_store.py  test_vector_store_caching.py  test_vector_store_chunk_size.py  test_vector_store_memory_limit.py  test_vector_store_memory_monitoring.py  test_vector_store_query_length.py  test_vector_store_token_count.py
tests/unit/workflows/: test_asyncio_timeout_no_retry.py  test_corrective_rag_errors.py  test_corrective_rag_timeout.py  test_events.py  test_exceptions.py  test_rag_build_prompt_dry.py  test_rag_cache_mutation.py  test_rag_cache_race_condition.py  test_rag_cache_thundering_herd.py  test_rag_prompt_injection.py  test_rag_result_caching.py  test_rag_result_type_safety.py  test_rag_workflow_caching.py  test_rag_xml_escaping.py  test_state.py  test_state_max_retries_validation.py  test_workflow_level_timeout.py
